# data-nerds-tool-survey-results

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: python_test_lint.yml
config/: env.yml
data/: data_tools_survey_results.csv
data/mapping/: cloud_provider_mapping.csv  data_tool_mapping.csv  programming_language_mapping.csv  programming_package_mapping.csv  role_mapping.csv
data/output/: survey_cloud_provider.csv  survey_data_tool.csv  survey_programming_language.csv  survey_programming_package.csv  survey_role_experience.csv
data/survey/: survey_results.csv
mapping/: cloud_provider_mapping.csv
prototype/: prototype_processing.ipynb
src/: process_survey_results.py
tests/: test_example.py  test_process_survey_results.py
